--- a/applications/source/twitter-stream-source/README.adoc
+++ b/applications/source/twitter-stream-source/README.adoc
@@ -15,33 +15,7 @@ The default access level allows up to 400 track keywords, 5,000 follow user Ids 
 
 == Options
 
-//tag::configuration-properties[]
-Properties grouped by prefix:
-
-
-=== twitter.connection
-
-$$access-token$$:: $$Your Twitter token.$$ *($$String$$, default: `$$<none>$$`)*
-$$access-token-secret$$:: $$Your Twitter token secret.$$ *($$String$$, default: `$$<none>$$`)*
-$$consumer-key$$:: $$Your Twitter key.$$ *($$String$$, default: `$$<none>$$`)*
-$$consumer-secret$$:: $$Your Twitter secret.$$ *($$String$$, default: `$$<none>$$`)*
-$$debug-enabled$$:: $$Enables Twitter4J debug mode.$$ *($$Boolean$$, default: `$$false$$`)*
-$$raw-json$$:: $$Enable caching the original (raw) JSON objects as returned by the Twitter APIs. When set to False the result will use the Twitter4J's json representations. When set to True the result will use the original Twitter APISs json representations.$$ *($$Boolean$$, default: `$$true$$`)*
-
-=== twitter.stream
-
-$$enabled$$:: $$Whether to enable Twitter streaming supplier.$$ *($$Boolean$$, default: `$$false$$`)*
-$$type$$:: $$<documentation missing>$$ *($$StreamType$$, default: `$$<none>$$`, possible values: `sample`,`filter`,`firehose`,`link`)*
-
-=== twitter.stream.filter
-
-$$count$$:: $$Indicates the number of previous statuses to stream before transitioning to the live stream.$$ *($$Integer$$, default: `$$0$$`)*
-$$filter-level$$:: $$The filter level limits what tweets appear in the stream to those with a minimum filterLevel attribute value. One of either none, low, or medium.$$ *($$FilterLevel$$, default: `$$<none>$$`)*
-$$follow$$:: $$Specifies the users, by ID, to receive public tweets from.$$ *($$List<Long>$$, default: `$$<none>$$`)*
-$$language$$:: $$Specifies the tweets language of the stream.$$ *($$List<String>$$, default: `$$<none>$$`)*
-$$locations$$:: $$Locations to track. Internally represented as 2D array. Bounding box is invalid: 52.38, 4.90, 51.51, -0.12. The first pair must be the SW corner of the box$$ *($$List<BoundingBox>$$, default: `$$<none>$$`)*
-$$track$$:: $$Specifies keywords to track.$$ *($$List<String>$$, default: `$$<none>$$`)*
-//end::configuration-properties[]
+https://github.com/spring-cloud/spring-functions-catalog/tree/main/supplier/spring-twitter-supplier#22-configuration-options[See function catalog for configuration options]
 
 //end::ref-doc[]
 
@@ -51,5 +25,3 @@ $$track$$:: $$Specifies keywords to track.$$ *($$List<String>$$, default: `$$<no
 ```
 java -jar twitter-stream-source.jar --twitter.connection.accessTokenSecret=xxx --twitter.connection.accessToken=xxx --twitter.connection.consumerKey=xxx --twitter.connection.consumerSecret=xxx
 ```
-
-
