--- a/applications/sink/elasticsearch-sink/README.adoc
+++ b/applications/sink/elasticsearch-sink/README.adoc
@@ -14,38 +14,8 @@ This is provided mainly for direct invocation of the consumer.
 
 The **$$Elasticsearch$$** $$sink$$ has the following options:
 
-//tag::configuration-properties[]
-Properties grouped by prefix:
-
-
-=== elasticsearch.consumer
-
-$$async$$:: $$Indicates whether the indexing operation is async or not. By default, indexing is done synchronously.$$ *($$Boolean$$, default: `$$false$$`)*
-$$batch-size$$:: $$Number of items to index for each request. It defaults to 1. For values greater than 1 bulk indexing API will be used.$$ *($$Integer$$, default: `$$1$$`)*
-$$group-timeout$$:: $$Timeout in milliseconds after which message group is flushed when bulk indexing is active. It defaults to -1, meaning no automatic flush of idle message groups occurs.$$ *($$Long$$, default: `$$-1$$`)*
-$$id$$:: $$The id of the document to index. If set, the INDEX_ID header value overrides this property on a per-message basis.$$ *($$Expression$$, default: `$$<none>$$`)*
-$$index$$:: $$Name of the index. If set, the INDEX_NAME header value overrides this property on a per-message basis.$$ *($$String$$, default: `$$<none>$$`)*
-$$routing$$:: $$Indicates the shard to route to. If not provided, Elasticsearch will default to a hash of the document id.$$ *($$String$$, default: `$$<none>$$`)*
-$$timeout-seconds$$:: $$Timeout for the shard to be available. If not set, it defaults to 1 minute set by the Elasticsearch client.$$ *($$Long$$, default: `$$0$$`)*
-
-=== spring.elasticsearch
-
-$$connection-timeout$$:: $$Connection timeout used when communicating with Elasticsearch.$$ *($$Duration$$, default: `$$1s$$`)*
-$$password$$:: $$Password for authentication with Elasticsearch.$$ *($$String$$, default: `$$<none>$$`)*
-$$path-prefix$$:: $$Prefix added to the path of every request sent to Elasticsearch.$$ *($$String$$, default: `$$<none>$$`)*
-$$socket-keep-alive$$:: $$Whether to enable socket keep alive between client and Elasticsearch.$$ *($$Boolean$$, default: `$$false$$`)*
-$$socket-timeout$$:: $$Socket timeout used when communicating with Elasticsearch.$$ *($$Duration$$, default: `$$30s$$`)*
-$$uris$$:: $$Comma-separated list of the Elasticsearch instances to use.$$ *($$List<String>$$, default: `$$[http://localhost:9200]$$`)*
-$$username$$:: $$Username for authentication with Elasticsearch.$$ *($$String$$, default: `$$<none>$$`)*
-
-=== spring.elasticsearch.restclient.sniffer
-
-$$delay-after-failure$$:: $$Delay of a sniff execution scheduled after a failure.$$ *($$Duration$$, default: `$$1m$$`)*
-$$interval$$:: $$Interval between consecutive ordinary sniff executions.$$ *($$Duration$$, default: `$$5m$$`)*
-
-=== spring.elasticsearch.restclient.ssl
-
-$$bundle$$:: $$SSL bundle name.$$ *($$String$$, default: `$$<none>$$`)*
+//tag::configuration-properties[link-to-catalog=true]
+https://github.com/spring-cloud/spring-functions-catalog/tree/main/consumer/spring-elasticsearch-consumer#configuration-options[See Spring Functions Catalog for configuration options].
 //end::configuration-properties[]
 
 == Examples of running this sink
