--- a/applications/sink/rabbit-sink/README.adoc
+++ b/applications/sink/rabbit-sink/README.adoc
@@ -9,46 +9,8 @@ The **$$rabbit$$** $$sink$$ has the following options:
 
 (See the Spring Boot documentation for RabbitMQ connection properties)
 
-//tag::configuration-properties[]
-Properties grouped by prefix:
-
-
-=== rabbit.consumer
-
-$$converter-bean-name$$:: $$The bean name for a custom message converter; if omitted, a SimpleMessageConverter is used. If 'jsonConverter', a Jackson2JsonMessageConverter bean will be created for you.$$ *($$String$$, default: `$$<none>$$`)*
-$$exchange$$:: $$Exchange name - overridden by exchangeNameExpression, if supplied.$$ *($$String$$, default: `$$<empty string>$$`)*
-$$exchange-expression$$:: $$A SpEL expression that evaluates to an exchange name.$$ *($$Expression$$, default: `$$<none>$$`)*
-$$headers-mapped-last$$:: $$When mapping headers for the outbound message, determine whether the headers are mapped before the message is converted, or afterward.$$ *($$Boolean$$, default: `$$true$$`)*
-$$mapped-request-headers$$:: $$Headers that will be mapped.$$ *($$String[]$$, default: `$$[*]$$`)*
-$$persistent-delivery-mode$$:: $$Default delivery mode when 'amqp_deliveryMode' header is not present, true for PERSISTENT.$$ *($$Boolean$$, default: `$$false$$`)*
-$$routing-key$$:: $$Routing key - overridden by routingKeyExpression, if supplied.$$ *($$String$$, default: `$$<none>$$`)*
-$$routing-key-expression$$:: $$A SpEL expression that evaluates to a routing key.$$ *($$Expression$$, default: `$$<none>$$`)*
-
-=== spring.rabbitmq
-
-$$address-shuffle-mode$$:: $$Mode used to shuffle configured addresses.$$ *($$AddressShuffleMode$$, default: `$$none$$`, possible values: `NONE`,`RANDOM`,`INORDER`)*
-$$addresses$$:: $$Comma-separated list of addresses to which the client should connect. When set, the host and port are ignored.$$ *($$String$$, default: `$$<none>$$`)*
-$$channel-rpc-timeout$$:: $$Continuation timeout for RPC calls in channels. Set it to zero to wait forever.$$ *($$Duration$$, default: `$$10m$$`)*
-$$connection-timeout$$:: $$Connection timeout. Set it to zero to wait forever.$$ *($$Duration$$, default: `$$<none>$$`)*
-$$host$$:: $$RabbitMQ host. Ignored if an address is set.$$ *($$String$$, default: `$$localhost$$`)*
-$$max-inbound-message-body-size$$:: $$Maximum size of the body of inbound (received) messages.$$ *($$DataSize$$, default: `$$64MB$$`)*
-$$password$$:: $$Login to authenticate against the broker.$$ *($$String$$, default: `$$guest$$`)*
-$$port$$:: $$RabbitMQ port. Ignored if an address is set. Default to 5672, or 5671 if SSL is enabled.$$ *($$Integer$$, default: `$$<none>$$`)*
-$$publisher-confirm-type$$:: $$Type of publisher confirms to use.$$ *($$ConfirmType$$, default: `$$<none>$$`, possible values: `SIMPLE`,`CORRELATED`,`NONE`)*
-$$publisher-returns$$:: $$Whether to enable publisher returns.$$ *($$Boolean$$, default: `$$false$$`)*
-$$requested-channel-max$$:: $$Number of channels per connection requested by the client. Use 0 for unlimited.$$ *($$Integer$$, default: `$$2047$$`)*
-$$requested-heartbeat$$:: $$Requested heartbeat timeout; zero for none. If a duration suffix is not specified, seconds will be used.$$ *($$Duration$$, default: `$$<none>$$`)*
-$$username$$:: $$Login user to authenticate to the broker.$$ *($$String$$, default: `$$guest$$`)*
-$$virtual-host$$:: $$Virtual host to use when connecting to the broker.$$ *($$String$$, default: `$$<none>$$`)*
-
-=== spring.rabbitmq.template
-
-$$default-receive-queue$$:: $$Name of the default queue to receive messages from when none is specified explicitly.$$ *($$String$$, default: `$$<none>$$`)*
-$$exchange$$:: $$Name of the default exchange to use for send operations.$$ *($$String$$, default: `$$<empty string>$$`)*
-$$mandatory$$:: $$Whether to enable mandatory messages.$$ *($$Boolean$$, default: `$$<none>$$`)*
-$$receive-timeout$$:: $$Timeout for receive() operations.$$ *($$Duration$$, default: `$$<none>$$`)*
-$$reply-timeout$$:: $$Timeout for sendAndReceive() operations.$$ *($$Duration$$, default: `$$<none>$$`)*
-$$routing-key$$:: $$Value of a default routing key to use for send operations.$$ *($$String$$, default: `$$<empty string>$$`)*
+//tag::configuration-properties[link-to-catalog=true]
+https://github.com/spring-cloud/spring-functions-catalog/tree/main/consumer/spring-rabbit-consumer#configuration-options[See Spring Functions Catalog for configuration options].
 //end::configuration-properties[]
 
 //end::ref-doc[]
