--- a/applications/sink/twitter-message-sink/README.adoc
+++ b/applications/sink/twitter-message-sink/README.adoc
@@ -16,12 +16,7 @@ TIP: Use single quotes (`'`) to wrap the literal values of the `SpEL` expression
 For example to set a fixed message text use `text='Fixed Text'`.
 For fixed target userId use `userId='666'`.
 
-//tag::configuration-properties[]
-$$twitter.message.update.media-id$$:: $$A media id to associate with the message. A Direct Message may only reference a single media id.$$ *($$Expression$$, default: `$$<none>$$`)*
-$$twitter.message.update.screen-name$$:: $$The screen name of the user to whom send the direct message.$$ *($$Expression$$, default: `$$<none>$$`)*
-$$twitter.message.update.text$$:: $$The direct message text. URL encode as necessary. Max length of 10,000 characters.$$ *($$Expression$$, default: `$$payload$$`)*
-$$twitter.message.update.user-id$$:: $$The user id of the user to whom send the direct message.$$ *($$Expression$$, default: `$$<none>$$`)*
-//end::configuration-properties[]
+https://github.com/spring-cloud/spring-functions-catalog/tree/main/consumer/spring-twitter-consumer#22-configuration-options[See function catalog for configuration options]
 
 //end::ref-doc[]
 
@@ -48,4 +43,3 @@ And here is a example pipeline that uses twitter-message:
 ```
 twitter-message-stream= TODO
 ```
-
