--- a/applications/source/rabbit-source/README.adoc
+++ b/applications/source/rabbit-source/README.adoc
@@ -20,57 +20,8 @@ N/A
 
 The **$$rabbit$$** $$source$$ has the following options:
 
-//tag::configuration-properties[]
-Properties grouped by prefix:
-
-
-=== rabbit.supplier
-
-$$enable-retry$$:: $$true to enable retry.$$ *($$Boolean$$, default: `$$false$$`)*
-$$initial-retry-interval$$:: $$Initial retry interval when retry is enabled.$$ *($$Integer$$, default: `$$1000$$`)*
-$$mapped-request-headers$$:: $$Headers that will be mapped.$$ *($$String[]$$, default: `$$[STANDARD_REQUEST_HEADERS]$$`)*
-$$max-attempts$$:: $$The maximum delivery attempts when retry is enabled.$$ *($$Integer$$, default: `$$3$$`)*
-$$max-retry-interval$$:: $$Max retry interval when retry is enabled.$$ *($$Integer$$, default: `$$30000$$`)*
-$$queues$$:: $$The queues to which the source will listen for messages.$$ *($$String[]$$, default: `$$<none>$$`)*
-$$requeue$$:: $$Whether rejected messages should be requeued.$$ *($$Boolean$$, default: `$$true$$`)*
-$$retry-multiplier$$:: $$Retry backoff multiplier when retry is enabled.$$ *($$Double$$, default: `$$2$$`)*
-$$transacted$$:: $$Whether the channel is transacted.$$ *($$Boolean$$, default: `$$false$$`)*
-
-=== spring.rabbitmq
-
-$$address-shuffle-mode$$:: $$Mode used to shuffle configured addresses.$$ *($$AddressShuffleMode$$, default: `$$none$$`, possible values: `NONE`,`RANDOM`,`INORDER`)*
-$$addresses$$:: $$Comma-separated list of addresses to which the client should connect. When set, the host and port are ignored.$$ *($$String$$, default: `$$<none>$$`)*
-$$channel-rpc-timeout$$:: $$Continuation timeout for RPC calls in channels. Set it to zero to wait forever.$$ *($$Duration$$, default: `$$10m$$`)*
-$$connection-timeout$$:: $$Connection timeout. Set it to zero to wait forever.$$ *($$Duration$$, default: `$$<none>$$`)*
-$$host$$:: $$RabbitMQ host. Ignored if an address is set.$$ *($$String$$, default: `$$localhost$$`)*
-$$max-inbound-message-body-size$$:: $$Maximum size of the body of inbound (received) messages.$$ *($$DataSize$$, default: `$$64MB$$`)*
-$$password$$:: $$Login to authenticate against the broker.$$ *($$String$$, default: `$$guest$$`)*
-$$port$$:: $$RabbitMQ port. Ignored if an address is set. Default to 5672, or 5671 if SSL is enabled.$$ *($$Integer$$, default: `$$<none>$$`)*
-$$publisher-confirm-type$$:: $$Type of publisher confirms to use.$$ *($$ConfirmType$$, default: `$$<none>$$`, possible values: `SIMPLE`,`CORRELATED`,`NONE`)*
-$$publisher-returns$$:: $$Whether to enable publisher returns.$$ *($$Boolean$$, default: `$$false$$`)*
-$$requested-channel-max$$:: $$Number of channels per connection requested by the client. Use 0 for unlimited.$$ *($$Integer$$, default: `$$2047$$`)*
-$$requested-heartbeat$$:: $$Requested heartbeat timeout; zero for none. If a duration suffix is not specified, seconds will be used.$$ *($$Duration$$, default: `$$<none>$$`)*
-$$username$$:: $$Login user to authenticate to the broker.$$ *($$String$$, default: `$$guest$$`)*
-$$virtual-host$$:: $$Virtual host to use when connecting to the broker.$$ *($$String$$, default: `$$<none>$$`)*
-
-=== spring.rabbitmq.listener.simple
-
-$$acknowledge-mode$$:: $$Acknowledge mode of container.$$ *($$AcknowledgeMode$$, default: `$$<none>$$`, possible values: `NONE`,`MANUAL`,`AUTO`)*
-$$auto-startup$$:: $$Whether to start the container automatically on startup.$$ *($$Boolean$$, default: `$$true$$`)*
-$$batch-size$$:: $$Batch size, expressed as the number of physical messages, to be used by the container.$$ *($$Integer$$, default: `$$<none>$$`)*
-$$concurrency$$:: $$Minimum number of listener invoker threads.$$ *($$Integer$$, default: `$$<none>$$`)*
-$$consumer-batch-enabled$$:: $$Whether the container creates a batch of messages based on the 'receive-timeout' and 'batch-size'. Coerces 'de-batching-enabled' to true to include the contents of a producer created batch in the batch as discrete records.$$ *($$Boolean$$, default: `$$false$$`)*
-$$de-batching-enabled$$:: $$Whether the container should present batched messages as discrete messages or call the listener with the batch.$$ *($$Boolean$$, default: `$$true$$`)*
-$$default-requeue-rejected$$:: $$Whether rejected deliveries are re-queued by default.$$ *($$Boolean$$, default: `$$<none>$$`)*
-$$force-stop$$:: $$Whether the container (when stopped) should stop immediately after processing the current message or stop after processing all pre-fetched messages.$$ *($$Boolean$$, default: `$$false$$`)*
-$$idle-event-interval$$:: $$How often idle container events should be published.$$ *($$Duration$$, default: `$$<none>$$`)*
-$$max-concurrency$$:: $$Maximum number of listener invoker threads.$$ *($$Integer$$, default: `$$<none>$$`)*
-$$missing-queues-fatal$$:: $$Whether to fail if the queues declared by the container are not available on the broker and/or whether to stop the container if one or more queues are deleted at runtime.$$ *($$Boolean$$, default: `$$true$$`)*
-$$prefetch$$:: $$Maximum number of unacknowledged messages that can be outstanding at each consumer.$$ *($$Integer$$, default: `$$<none>$$`)*
-
-=== spring.rabbitmq.listener
-
-$$type$$:: $$Listener container type.$$ *($$ContainerType$$, default: `$$simple$$`, possible values: `SIMPLE`,`DIRECT`,`STREAM`)*
+//tag::configuration-properties[link-to-catalog=true]
+https://github.com/spring-cloud/spring-functions-catalog/tree/main/supplier/spring-rabbit-supplier#configuration-options[See Spring Functions Catalog for configuration options].
 //end::configuration-properties[]
 
 Also see the https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html[Spring Boot Documentation]
